# hyperdual

./: .gitlab-ci.yml  .travis.yml  Cargo.toml  README.md
.github/workflows/: tests.yaml
examples/: vectorfn.rs
src/: differentials.rs  lib.rs  linalg.rs
tests/: lib.rs
