[package]
name = "hyperdual"
description = "Fully-featured Dual Number implementation with features for automatic differentiation of multivariate vectorial functions"
authors = ["Aaron Trent <novacrazy@gmail.com>", "Christopher Rabotin <christopher.rabotin@gmail.com>"]
version = "0.5.1"
license = "MIT"
include = ["src/**/*", "Cargo.toml"]
keywords = ["dual", "number", "hyperdual", "multidimentional", "autodifferentiate"]
readme = "README.md"
documentation = "https://docs.rs/hyperdual/"
repository = "https://gitlab.com/chrisrabotin/hyperdual"

[dependencies]
num-traits = "0.2"
nalgebra = "0.29"
