[package]
name = "hyperdual"
edition = "2021"
description = "Fully-featured Dual Number implementation with features for automatic differentiation of multivariate vectorial functions"
authors = [
    "Aaron Trent <novacrazy@gmail.com>",
    "Christopher Rabotin <christopher.rabotin@gmail.com>",
]
version = "1.4.0"
license = "MIT"
include = ["src/**/*", "Cargo.toml"]
keywords = [
    "dual",
    "number",
    "hyperdual",
    "multidimentional",
    "autodifferentiate",
]
readme = "README.md"
documentation = "https://docs.rs/hyperdual/"
repository = "https://github.com/christopherrabotin/hyperdual"

[dependencies]
num-traits = "0.2"
nalgebra = "=0.34"
